# serializer version: 1
# name: test_device_sensor_updates_on_event_sequence[events0][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events0][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'unknown',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events0][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events0][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events0][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events0][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events1][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events1][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addr': '192.168.1.100:22000',
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'clientName': 'syncthing',
      'clientVersion': 'v1.23.0',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'deviceName': 'Test Device',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'connected',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'connected',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events1][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events1][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events1][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events1][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events2][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events2][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'disconnected',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'disconnected',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events2][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events2][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events2][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events2][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events3][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events3][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'paused',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'paused',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events3][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events3][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events3][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events3][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events4][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events4][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addr': '192.168.1.100:22000',
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'clientName': 'syncthing',
      'clientVersion': 'v1.23.0',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'deviceName': 'Test Device',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'disconnected',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'disconnected',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events4][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events4][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events4][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events4][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events5][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events5][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'paused',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'paused',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events5][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events5][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events5][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events5][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events6][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events6][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'disconnected',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'disconnected',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events6][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events6][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events6][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_device_sensor_updates_on_event_sequence[events6][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'unknown',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'paused',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'paused',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_paused_received-event2][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'unknown',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'syncing',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'syncing',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_folder_summary_received-event0][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'unknown',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'syncing',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'syncing',
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_folder_sensor_updates_on_event[syncthing_state_changed_received-event1][sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_sensor_available_on_server_available[sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_available_on_server_available[sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'unknown',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_available_on_server_available[sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_available_on_server_available[sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_sensor_available_on_server_available[sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_available_on_server_available[sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'Test Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'unknown',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'errors': 0,
      'friendly_name': 'YZXABCD test-folder Test Folder',
      'global_bytes': 1000000,
      'global_deleted': 0,
      'global_directories': 10,
      'global_files': 100,
      'global_symlinks': 0,
      'global_total_items': 110,
      'id': 'test-folder',
      'ignore_patterns': False,
      'in_sync_bytes': 1000000,
      'in_sync_files': 100,
      'invalid': '',
      'label': 'Test Folder',
      'local_bytes': 1000000,
      'local_deleted': 0,
      'local_directories': 10,
      'local_files': 100,
      'local_symlinks': 0,
      'local_total_items': 110,
      'need_bytes': 0,
      'need_deletes': 0,
      'need_directories': 0,
      'need_files': 0,
      'need_symlinks': 0,
      'need_total_items': 0,
      'pull_errors': 0,
      'state': 'idle',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform_setup[sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'addresses': list([
        'dynamic',
      ]),
      'allowedNetworks': list([
      ]),
      'autoAcceptFolders': False,
      'certName': '',
      'compression': 'metadata',
      'deviceID': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
      'friendly_name': 'YZXABCD YZXABCD This Device',
      'ignoredFolders': list([
      ]),
      'introducedBy': '',
      'introducer': False,
      'maxRecvKbps': 0,
      'maxRequestKiB': 0,
      'maxSendKbps': 0,
      'name': 'This Device',
      'paused': False,
      'remoteGUIPort': 0,
      'skipIntroductionRemovals': False,
      'state': 'online',
      'untrusted': False,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_sensor_poll_error_makes_unavailable[sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_poll_error_makes_unavailable[sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_poll_error_makes_unavailable[sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_poll_error_makes_unavailable[sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'YZXABCD test-folder Test Folder',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_poll_error_makes_unavailable[sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_poll_error_makes_unavailable[sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'YZXABCD YZXABCD This Device',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_unavailable_on_server_unavailable[sensor.yzxabcd_abcdefg_test_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD ABCDEFG Test Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD ABCDEFG Test Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW-XYZABCD',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_unavailable_on_server_unavailable[sensor.yzxabcd_abcdefg_test_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'YZXABCD ABCDEFG Test Device',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_abcdefg_test_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_unavailable_on_server_unavailable[sensor.yzxabcd_test_folder_test_folder-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD test-folder Test Folder',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD test-folder Test Folder',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_folder',
    'unique_id': 'YZXABCD-test-folder',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_unavailable_on_server_unavailable[sensor.yzxabcd_test_folder_test_folder-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'YZXABCD test-folder Test Folder',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_test_folder_test_folder',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_sensor_unavailable_on_server_unavailable[sensor.yzxabcd_yzxabcd_this_device-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'YZXABCD YZXABCD This Device',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'YZXABCD YZXABCD This Device',
    'platform': 'syncthing',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'syncthing_device',
    'unique_id': 'YZXABCD-YZXABCD-ABCDEFG-HIJKLMN-OPQRSTU-VWXYZAB-CDEFGHI-JKLMNOP-QRSTUVW',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_unavailable_on_server_unavailable[sensor.yzxabcd_yzxabcd_this_device-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'YZXABCD YZXABCD This Device',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.yzxabcd_yzxabcd_this_device',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
